# offline-alert-triage-lab

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_COMPLETION_CHECKLIST.md  README.md  RELEASE.md  SECURITY.md  TESTING_REPORT.md  pyproject.toml
alerts/: README.md  sample_alerts.json
config/: README.md  grouping_rules.yaml  mitre_mapping.yaml  rules.yaml  triage_steps.yaml
docs/: alert-schema.md  configuration.md  design-decisions.md  incident-grouping.md  phase-0-plan.md  portfolio-notes.md  redaction-policy.md  release-checklist.md  report-schema.md  reporting.md  safety-model.md  testing-guide.md
reports/: README.md
scripts/: check-docs.py
tests/: test_alert_models.py  test_classification_engine.py  test_classification_rules.py  test_classification_safety.py  test_cli.py  test_cli_classify.py  test_cli_explain.py  test_cli_group_incidents.py  test_cli_mitre.py  test_cli_phase3.py  test_cli_report.py  test_config_files.py  test_config_validation_edge_cases.py  test_docs_safety_script.py  test_documentation_consistency.py  test_engine_and_model_edge_cases.py  test_explanation_engine.py  test_explanation_models.py  test_explanation_safety.py  test_grouping_config.py  test_grouping_correlator.py  test_grouping_engine.py  test_grouping_safety.py  test_incident_models.py  test_ingestion_inventory.py  test_ingestion_json.py  test_ingestion_safety.py  test_json_report.py  test_markdown_report.py  test_mitre_loader.py  test_mitre_mapping.py  test_mitre_models.py  test_mitre_safety.py  test_package.py  test_redaction_cli_integration.py  test_redaction_engine.py  test_redaction_models.py  (+13 more)
(+60 files in other folders)
